Fix token validation regex

--- a/scoring/update.html
+++ b/scoring/update.html
@@ -51,5 +51,5 @@
 {% endblock %}
 
 {% block valid_token_regex %}
-var valid_token_regex = /^[SG]*$/;
+var valid_token_regex = /^[TBS]*$/;
 {% endblock %}
